# ouroboros-agent-v1

./: .env.example  .gitignore  .graphify_detect.json  .graphify_incremental.json  .graphify_uncached.txt  AGENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_HANDOFF_detailed.md  README.md  main.py  pyproject.toml  test_implementation.py
.kilo/plans/: 1776236416613-quick-engine.md  1776248337515-proud-comet.md
app/: agent.py  analyze_traces.py  approvals.py  cli.py  compare_eval_runs.py  compare_memory_eval_runs.py  conversation_state.py  eval_runner.py  logger.py  long_term_memory.py  main.py  memory_eval_runner.py  memory_manager.py  model.py  paths.py  preview_markdown.py  runtime_context.py  settings.py  tool_registry.py  tool_trace_manager.py
app/api/: main.py  schemas.py  services.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CURRENT_SCOPE.md  PRODUCT.md  TASKS.md
evals/: cases.json  memory_cases.json
frontend/: package-lock.json
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_04.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
model-test-space/: colab_test.py  gemini_test.py  groq_test.py  groq_test2.py  kilo_test.py  lmstudio_server_test.py  openai_test.py  openrouter_test.py  openrouter_test2.py  remote_ollama.py
notes/: django_notes.txt  python_basics.md  rag_intro.md
tests/: conftest.py  test_agent.py  test_memory.py  test_model.py  test_tool_trace_manager.py  test_tools.py  test_workspace_tools.py
연습용/: a.txt  agent.md  d.txt  e.txt
(+13 files in other folders)
