[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ouroboros"
version = "0.1.0"
description = "Ouroboros local agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "groq>=1.1.2",
    "openai>=2.31.0",
    "openrouter>=0.8.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
ouroboros = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]